--- a/shader-debug.html
+++ b/shader-debug.html
@@ -13,67 +13,12 @@
     </header>
     <input id="file-input" type="file" accept="image/*" class="hidden" aria-hidden />
     <div class="pipeline-wrap">
-      <div class="pipeline" role="img" aria-label="管线：原图 → SAT → Pass1 → Pass2">
-        <div class="node" data-stage="source">
-          <span class="node-label">原图</span>
-          <div class="node-body">
-            <div class="node-image-wrap">
-              <canvas id="node-source" class="node-canvas"></canvas>
-            </div>
-            <div id="pane-source" class="node-params"></div>
-          </div>
-          <div class="node-channels" aria-label="通道显示">
-            <button type="button" class="channel-btn active" data-channel="r">R</button>
-            <button type="button" class="channel-btn active" data-channel="g">G</button>
-            <button type="button" class="channel-btn active" data-channel="b">B</button>
-            <button type="button" class="channel-btn active" data-channel="a">A</button>
-          </div>
-        </div>
-        <div class="node" data-stage="sat">
-          <span class="node-label">SAT (CPU)</span>
-          <div class="node-body">
-            <div class="node-image-wrap">
-              <canvas id="node-sat" class="node-canvas"></canvas>
-            </div>
-            <div id="pane-sat" class="node-params">尺寸同原图</div>
-          </div>
-          <div class="node-channels" aria-label="通道显示">
-            <button type="button" class="channel-btn active" data-channel="r">R</button>
-            <button type="button" class="channel-btn active" data-channel="g">G</button>
-            <button type="button" class="channel-btn active" data-channel="b">B</button>
-            <button type="button" class="channel-btn active" data-channel="a">A</button>
-          </div>
-        </div>
-        <div class="node" data-stage="pass1">
-          <span class="node-label">Pass1</span>
-          <div class="node-body">
-            <div class="node-image-wrap">
-              <canvas id="node-pass1" class="node-canvas"></canvas>
-            </div>
-            <div id="pane-pass1" class="node-params"></div>
-          </div>
-          <div class="node-channels" aria-label="通道显示">
-            <button type="button" class="channel-btn active" data-channel="r">R</button>
-            <button type="button" class="channel-btn active" data-channel="g">G</button>
-            <button type="button" class="channel-btn active" data-channel="b">B</button>
-            <button type="button" class="channel-btn active" data-channel="a">A</button>
-          </div>
-        </div>
-        <div class="node" data-stage="final">
-          <span class="node-label">Pass2</span>
-          <div class="node-body">
-            <div class="node-image-wrap">
-              <canvas id="node-final" class="node-canvas"></canvas>
-            </div>
-            <div id="pane-final" class="node-params"></div>
-          </div>
-          <div class="node-channels" aria-label="通道显示">
-            <button type="button" class="channel-btn active" data-channel="r">R</button>
-            <button type="button" class="channel-btn active" data-channel="g">G</button>
-            <button type="button" class="channel-btn active" data-channel="b">B</button>
-            <button type="button" class="channel-btn active" data-channel="a">A</button>
-          </div>
-        </div>
+      <div class="pipeline-container" aria-label="管线卡片区域">
+        <div class="pipeline" role="img" aria-label="管线：原图 → SAT → Pass1 → Pass2" id="pipeline"></div>
+      </div>
+      <div class="global-info-card">
+        <div class="global-info-card__title">时间轴</div>
+        <div class="global-info-card__body">需要全局信息</div>
       </div>
     </div>
     <script type="module" src="/src/pages/shader-debug.ts"></script>
